# INFOM227_Animations

./: .gitignore  LICENSE  README.md  interval_analysis.py  manim.cfg  programs.py  pyproject.toml  scenes.py  small.py  zero_analysis.py
docs/: README.md
small/: SmallGrammar.g4  __init__.py  interval_analysis.py  small_grammar.g4  zero_analysis.py
small/ast/: __init__.py  builder.py  symbol_table.py
small/cst/: __init__.py
small/cst/small/: SmallGrammar.interp  SmallGrammarLexer.py  SmallGrammarParser.py  SmallGrammarVisitor.py  small_grammar.interp  small_grammar.tokens  small_grammarLexer.interp  small_grammarLexer.py  small_grammarParser.py  small_grammarVisitor.py
src/small/: interval_analysis.py  zero_analysis.py
src/small/ast/: __init__.py  builder.py
src/small/cst/: __init__.py
src/small/cst/small/: SmallGrammarLexer.interp  SmallGrammarLexer.tokens  SmallGrammarParser.py
