[tool.poetry]
name = "infom227_animations"
version = "0.1.0"
description = ""
authors = ["Berg Lucas <55436804+BergLucas@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
manim = "^0.18.1"
manim-dataflow-analysis = { git = "https://github.com/BergLucas/manim-dataflow-analysis" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
